--- a/frontend/src/app/contract-list/contract-list.component.scss
+++ b/frontend/src/app/contract-list/contract-list.component.scss
@@ -25,3 +25,33 @@
         }
     }
 }
+
+.settings {
+    div {
+        padding: 0.25rem;
+    }
+    border-radius: 4px;
+    border: 1px solid #eee;
+    background-color: #fafafa;
+    min-width: 200px;
+    margin: 0 0.5rem 0.5rem 0.5rem;
+    padding: 16px;
+    width: calc(100% - 3rem);
+}
+
+.overlay {
+    min-height: 30vh;
+    text-align: left;
+    @media (min-width: 30rem) {
+        min-width: 28rem;
+        h1 {
+            margin-top: 1.5rem;
+        }
+    }
+}
+
+.upper-right-corner {
+    justify-content: center;
+    min-width: 5rem;
+}
+
