--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,7 +8,7 @@ $dark-blue: darken($main-blue, 20%);
   h4,
   h5,
   h6 {
-    margin: 8px 0;
+    margin: 0.5rem 0;
   }
 
   p {
@@ -46,7 +46,7 @@ $dark-blue: darken($main-blue, 20%);
     top: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 3.75rem;
     display: flex;
     align-items: center;
     background-color: $main-blue;
@@ -55,14 +55,14 @@ $dark-blue: darken($main-blue, 20%);
   }
 
   .toolbar span:first-child {
-    margin: 0 16px;
+    margin: 0 1rem;
   }
 
   .content {
     display: flex;
-    margin: 62px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
+    margin: 3.875rem auto 2rem;
+    padding: 0 1rem;
+    max-width: 60rem;
     flex-direction: column;
     align-items: center;
   }
@@ -71,22 +71,22 @@ $dark-blue: darken($main-blue, 20%);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   .card {
-    border-radius: 4px;
+    border-radius: 0.25rem;
     border: 1px solid #eee;
     background-color: #fafafa;
-    height: 25px;
-    min-width: 200px;
-    margin: 0 8px 0px;
-    padding: 16px;
+    height: 1.5625rem;
+    min-width: 12.5rem;
+    margin: 0 0.5rem 0;
+    padding: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    line-height: 24px;
+    line-height: 1.5rem;
   }
 
   .selectable {
@@ -96,7 +96,7 @@ $dark-blue: darken($main-blue, 20%);
     &:not(:disabled) {
         &:not(:focus):hover {
             transform: translateY(-3px);
-            box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+            box-shadow: 0 0.25rem 17px rgba(0, 0, 0, 0.35);
         }
     
         &:focus {
@@ -121,8 +121,8 @@ $dark-blue: darken($main-blue, 20%);
   }
 
   .card.card-small {
-    height: 16px;
-    min-width: 60px;
+    height: 1rem;
+    min-width: 3.75rem;
   }
 
   .card.highlight-card {
@@ -134,7 +134,7 @@ $dark-blue: darken($main-blue, 20%);
   }
 
   .card.card.highlight-card span {
-    margin-left: 60px;
+    margin-left: 3.75rem;
   }
 
   .busy {
@@ -157,10 +157,46 @@ $dark-blue: darken($main-blue, 20%);
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 140;
+    z-index: 10;
     display: block;
   }
-  
+
+  .overlay {
+    position: fixed;
+    z-index: 20;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #eee;
+    border-radius: 0.5rem;
+    box-shadow: 1rem 1rem 2rem black;;
+    text-align: center;
+    min-width: 30vw;
+    max-width: calc(100vw - 3rem);
+    min-height: 50vh;
+    max-height: 100vh;
+    padding: 1rem;
+    overflow: scroll;
+}
+
+.overlay.extended {
+    width: calc(100vw - 3rem);
+    @media (min-width: 64rem) {
+        width: calc(100vw - 5rem);
+    }
+}
+
+.upper-right-corner {
+  position: relative;
+  top: 0.5rem;
+
+  @media (min-width: 40rem) {
+      position: absolute;
+      right: 1rem;
+  }
+}
+
+
   a,
   a:visited,
   a:hover {
@@ -181,14 +217,14 @@ $dark-blue: darken($main-blue, 20%);
   }
   
   footer {
-    margin-top: 8px;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
-    line-height: 20px;
+    line-height: 1.25rem;
   }
 
   /* Responsive Styles */
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 47.9375rem) {
 
     .card-container > *:not(.circle-link) ,
     .terminal {
@@ -196,12 +232,12 @@ $dark-blue: darken($main-blue, 20%);
     }
 
     .card:not(.highlight-card) {
-      height: 16px;
-      margin: 8px 0;
+      height: 1rem;
+      margin: 0.5rem 0;
     }
 
     .card.highlight-card span {
-      margin-left: 72px;
+      margin-left: 4.5rem;
     }
 
   }
