--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -8,3 +8,33 @@
 .backdrop {
     z-index: 140;
 }
+
+.dropdown-menu {
+    position: absolute;
+    right: 0;
+    z-index: 100;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: 0.4rem 0;
+    margin: 0.1rem 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    color: black;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+
+    & > li {
+        padding: 0.3rem;
+    }
+}
+
+.open > .dropdown-menu {
+    display: block;
+}
